# blogs-pydantic

./: README.md  pyproject.toml
.github/workflows/: checks.yml  test.yml
blogs_pydantic/: v1_basic_validation.py  v1_data_type_validation.py  v2_semantic_validation.py  v3_schema_validation.py
